Changed i3config lowered titlebar

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,5 @@
 backend = "glx";
+corner-radius = 30;
 vsync = true;
 glx-use-copysubbuffer-mesa = true;
 
@@ -6,3 +7,6 @@ glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
+# gpt stuff
+#
+
