--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,22 @@
 include ./kitty-themes/themes/gruvbox_dark.conf
 
-
-# FONT AND FONT FAMILY
+clear_all_shortcuts yes
+placement_strategy bottom
+####################
+# FONT
+####################
 font_family 		FiraCodeNFM-Reg
 bold_font			FiraCodeNFM-Reg
 italic_font			FiraCodeNFM-Ret
 bold_italic_font	FiraCodeNFM-SemBd
 
 font_size			16.0
+
+####################
+# SHORTCUTS
+####################
+map ctrl+shift+c copy_clipboard 			# Copying
+map ctrl+shift+v paste_from_clipboard		# Pasting
+map ctrl+shift+f5 load_config_file			# Reloading
+map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+minus change_font_size all -2.0
