--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,9 @@
 set-option -sa terminal-overrides ",kitty*:Tc"
+
+# Set source file for reloading
+unbind r 
+bind r source-file ~/.config/tmux/tmux.conf
+
 # Set prefix to Ctrl-Space
 unbind C-b
 set -g prefix C-Space
@@ -7,6 +12,15 @@ bind C-Space send-prefix
 # Shift windows using shift-alt-vim keys
 bind -n M-H previous-window
 bind -n M-L next-window
+
+# Enable Mouse
+set -g mouse on
+
+# Vim Keybindings
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
