--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,8 +15,14 @@ font_size			16.0
 ####################
 # SHORTCUTS
 ####################
-map ctrl+shift+c copy_clipboard 			# Copying
-map ctrl+shift+v paste_from_clipboard		# Pasting
-map ctrl+shift+f5 load_config_file			# Reloading
+map ctrl+shift+c copy_clipboard
+map ctrl+shift+v paste_from_clipboard
+map ctrl+shift+f5 load_config_file
 map ctrl+shift+equal change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
+
+
+####################
+# MOUSE
+####################
+detect_urls yes
