Changed nvim colorscheme as well i3config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,6 +14,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 bindsym $mod+d exec rofi -show combi
 # Picom startup
 exec --no-startup-id picom
+exec --no-startup-id autorandr -l extend144
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -109,7 +110,7 @@ set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10"
+set $ws10 "0"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
