Added display mode

--- a/.config/i3/bindings.conf
+++ b/.config/i3/bindings.conf
@@ -96,6 +96,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+mode "display" {
+        i3-msg "display mode"
+        bindsym 1 exec autorandr extend144
+        bindsym 2 exec autorandr extend-tv
+        bindsym 3 exec autorandr second144 
+        bindsym 4 exec autorandr second-tv
+        bindsym 5 exec autorandr mirror
+        bindsym 0 exec autorandr dock
+        
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+m mode "default"
+}
+
+bindsym $mod+m mode "display"
+
 #######################
 # -0-0 SCREENSHOTS 0-0-
 #######################
