--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,6 +24,7 @@ exec --no-startup-id autorandr -l extend144
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
+# Assign kitty to workspace 1 initially
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
@@ -95,6 +96,10 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 
+
+# Autostart applications in their respective workspaces
+exec --no-startup-id i3-msg "workspace 1; exec kitty"
+exec --no-startup-id i3-msg "workspace 2; exec firefox"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
