--- a/.config/i3/bindings.conf
+++ b/.config/i3/bindings.conf
@@ -102,7 +102,7 @@ mode "display" {
         bindsym 3 exec autorandr second144 
         bindsym 4 exec autorandr second-tv
         bindsym 5 exec autorandr mirror
-        bindsym 0 exec autorandr dock
+        bindsym 0 exec autorandr mobile
         
         bindsym Return mode "default"
         bindsym Escape mode "default"
