--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,8 +28,8 @@ disabled = #707880
 [bar/4bn4v]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 18pt
-bottom = true
+height = 16pt
+# bottom = true
 
 ; dpi = 96
 
@@ -46,13 +46,12 @@ padding-right = 1
 
 module-margin = 1
 
-separator = |
-separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
+font-1 = FiraCode Nerd Font Mono Med:style=Regular;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem backlight pulseaudio memory cpu date battery 
+modules-right =  filesystem backlight pulseaudio memory cpu battery date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -108,7 +107,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -132,14 +131,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "󰍛"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -164,11 +163,11 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M %Y-%m-%d
-date-alt = %Y-%m-%d %H:%M:%S
+date = %a %b %d %OI:%M%P
 
-label = %date%
-label-foreground = ${colors.primary}
+label-prefix = |
+label =| %date%
+label-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
@@ -182,19 +181,19 @@ full-at = 99
 ; New in version 3.6.0
 low-at = 5
 
-label-charging = Charging %percentage%%
+label-charging = | Charging %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = Discharging %percentage%%
+label-discharging = | Discharging %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
-label-full = Fully charged
+label-full = | Fully charged
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -202,7 +201,7 @@ label-full = Fully charged
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
 ; New in version 3.6.0
-label-low = BATTERY LOW
+label-low = | BATTERY LOW
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
@@ -244,7 +243,7 @@ use-actual-brightness = true
 ; New in version 3.7.0
 ; Default: 0 (5 if use-actual-brightness is false)
 poll-interval = 0
-format-prefix = "Brightness "
+format-prefix = "󰃟 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage%%
 ; Enable changing the backlight with the scroll wheel
