--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -91,7 +91,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label =  %title:0:60:...%
 
 [module/filesystem]
 type = internal/fs
@@ -107,14 +107,19 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume = <ramp-volume> <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted =  muted
 label-muted-foreground = ${colors.disabled}
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-foreground = ${colors.primary} 
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -179,7 +184,7 @@ full-at = 99
 ; format-low once this charge percentage is reached
 ; Default: 10
 ; New in version 3.6.0
-low-at = 5
+low-at = 25
 
 label-charging = | Charging %percentage%%
 
