configuaration changes again
i3 -> added new modes for exiting i3
picom -> replaced backend renderer, according to arch wiki
zellij -> changed jlox template
kitty -> removed defaults and added necessary shortcuts

--- a/.config/i3/bindings.conf
+++ b/.config/i3/bindings.conf
@@ -111,6 +111,21 @@ mode "display" {
 
 bindsym $mod+m mode "display"
 
+mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
+
+  bindsym l exec i3-msg exit
+
+  bindsym r exec systemctl reboot
+
+  bindsym s exec systemctl shutdown
+
+  bindsym Escape mode "default"
+
+  bindsym Return mode "default"
+
+}
+
+bindsym $mod+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
 #######################
 # -0-0 SCREENSHOTS 0-0-
 #######################
