--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 include ./kitty-themes/themes/gruvbox_material_medium_dark.conf
 
+enable_audio_bell no
+clear_all_shortcuts yes
 placement_strategy bottom
 ####################
 # FONT
@@ -12,3 +14,19 @@ bold_italic_font	FiraCodeNFM-SemBd
 font_size			16.0
 
 detect_urls yes
+
+# Shortcuts
+
+## Clipboard
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+
+## Scrolling
+map ctrl+shift+k scroll_line_up
+map ctrl+shift+j scroll_line_down
+map ctrl+shift+page_up scroll_page_up
+map ctrl+shift+page_down scroll_page_down
+
+## Font Size
+map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+minus change_font_size all -2.0
