--- a/.config/i3/config
+++ b/.config/i3/config
@@ -102,6 +102,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # Autostart applications in their respective workspaces
 exec --no-startup-id i3-msg "workspace 1; exec kitty"
 exec --no-startup-id i3-msg "workspace 2; exec firefox"
+for_window[class="firefox"] layout tabbed
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
