--- a/.config/i3/bindings.conf
+++ b/.config/i3/bindings.conf
@@ -97,12 +97,11 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 mode "display" {
-        bindsym 1 exec autorandr extend144 && i3-msg reload
-        bindsym 2 exec autorandr extend-tv && i3-msg reload
-        bindsym 3 exec autorandr second144 && i3-msg reload 
-        bindsym 4 exec autorandr second-tv && i3-msg reload
-        bindsym 5 exec autorandr mirror && i3-msg reload
-        bindsym 0 exec autorandr dock && i3-msg reload
+        bindsym 1 exec autorandr extend144
+        bindsym 2 exec autorandr extend-tv
+        bindsym 3 exec autorandr second144
+        bindsym 4 exec autorandr second-tv
+        bindsym 0 exec autorandr mobile
         
         bindsym Return mode "default"
         bindsym Escape mode "default"
