Added better audio support for pipewire instead of PulseAudio

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -81,7 +81,7 @@ label-active-padding = 1
 label-occupied = %name%
 label-occupied-padding = 1
 
-label-urgent = %name%
+label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
