--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@ placement_strategy bottom
 # FONT
 ####################
 font_family 		FiraCodeNFM-Reg
-bold_font			FiraCodeNFM-Reg
+bold_font			FiraCodeNFM-Med
 italic_font			FiraCodeNFM-Ret
-bold_italic_font	FiraCodeNFM-SemBd
+bold_italic_font	FiraCodeNF-SemBd
 
 font_size			16.0
 
