Config changes, allman c/cpp formatting Added bindings for firefox execution Added specific formatting for c and cpp files Added alias for bluetooth Added clang-format rules for the superior indentation style: Allman

--- a/.config/i3/bindings.conf
+++ b/.config/i3/bindings.conf
@@ -1,7 +1,8 @@
 ################
-# -0-0 ROFI 0-0-
+# -0-0 EXECUTES 0-0-
 ################
 bindsym $mod+d exec rofi -show combi
+bindsym $mod+b exec firefox
 
 #######################
 # -0-0 PULSE AUDIO 0-0-
