Forgot to add this in changes lol

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ placement_strategy bottom
 font_family 		FiraCodeNFM-Reg
 bold_font			FiraCodeNFM-Med
 italic_font			FiraCodeNFM-Ret
-bold_italic_font	FiraCodeNF-SemBd
+bold_italic_font	FiraCodeNFM-SemBd
 
 font_size			16.0
 
