Hyprconfigs added What a ride

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
 include ./kitty-themes/themes/gruvbox_material_medium_dark.conf
 
+confirm_os_window_close 0
 enable_audio_bell no
 clear_all_shortcuts yes
 placement_strategy bottom
