another rabbit hole

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,10 +23,13 @@
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 
 
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/workspaces.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1, 1920x1080@144, 0x0, 1
-monitor=eDP-1, 1920x1080@120, -1920x0, 1
+# monitor=HDMI-A-1, 1920x1080@144, 0x0, 1
+# monitor=eDP-1, 1920x1080@120, -1920x0, 1
 exec-once = hyprpaper
+# exec-once = ~/.config/hypr/scripts/screensharing.sh
 
 ###################
 ### MY PROGRAMS ###
@@ -51,6 +54,7 @@ $browser = firefox
 # exec-once = $terminal
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
+exec-once = waybar
 # exec-once = waybar & hyprpaper & firefox
 
 
@@ -198,7 +202,11 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod, F, exec, $browser
+bind = $mainMod, F, fullscreen, 1
+bind = $mainMod SHIFT, F, fullscreen, 0
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, Space, swapactiveworkspaces, current 1
+bind = $mainMod SHIFT, R, exec, hyprctl reload
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -236,9 +244,9 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod SHIFT, Space, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, Space, movetoworkspace, special:magic
-bind = $mainMod, SPACE, exec, killall waybar || waybar
+bind = $mainMod, Z, togglespecialworkspace, magic
+bind = $mainMod SHIFT, Z, movetoworkspace, special:magic
+bind = $mainMod, T, exec, killall waybar || waybar
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -251,6 +259,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Sound
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
+# bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
+bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 
 ##############################
@@ -259,7 +269,7 @@ binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-workspace = 0, monitor:eDPI-1, default:0
+# workspace = 10, monitor:1
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -268,3 +278,4 @@ workspace = 0, monitor:eDPI-1, default:0
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
