--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
+# ASTRONAUT
 preload = /home/n4v/.config/backgrounds/astronaut.png
 wallpaper = ,/home/n4v/.config/backgrounds/astronaut.png
+# MOUNTAIN
+# preload = /home/n4v/.config/backgrounds/mountain.png
+# wallpaper = ,/home/n4v/.config/backgrounds/mountain.png
