--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -19,7 +19,7 @@ windowrulev2 = opacity 0.8 0.8, class:(com.ayugram.desktop)
 windowrulev2 = opacity 0.8, class:(floorp)
 windowrulev2 = opacity 0.9, class:^(alacritty)$
 windowrulev2 = opacity 0.8, class:^(Outline)$
-windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
+windowrulev2 = opacity 0.95 0.95,class:^(firefox)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-oss)$
 windowrulev2 = opacity 0.80 0.80,class:^(Code)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
