floating window changes

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -21,6 +21,8 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, F, fullscreen, 0
+bind = $mainMod SHIFT, Semicolon, exec, blueman-manager
+bind = $mainMod, Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
 
 # Bottom Row
 bind = $mainMod, V, exec, kitty --class clipse -e 'clipse'
