--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -6,3 +6,8 @@
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float,class:(clipse)
+windowrulev2 = float,class:(blueman-manager)
+windowrulev2 = opacity 0.8, class:(blueman-manager)
+windowrulev2 = float,class:(pulsemixer)
+windowrulev2 = size 900 500,class:(pulsemixer)
+windowrulev2 = opacity 0.95, class:(pulsemixer)
