More configurations Bluetuith configurations for keybindings added hypridle daemon hyprland   - changed gaps   - added blur   - changed border size   - disabled default logos   - added backandforth workspaces   - useing swww now   - added and changed some keybindigns   - added script for changing monitor modes   - added brightness change   - added and rearranged window rules nvim   - added highlight colors finally waybar   - width changes   - module changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show combi
 $browser = firefox
+$wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 
 # +==========================================================+
 # |░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀░█▀▀|
@@ -54,7 +55,7 @@ $browser = firefox
 
 general { 
     gaps_in = 5
-    gaps_out = 8
+    gaps_out = 9
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
@@ -85,12 +86,17 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
-        size = 3
-        passes = 1
-        
-        vibrancy = 0.1696
+      enabled = true
+      size = 10
+      passes = 2
+      ignore_opacity = on
+      popups = true
+      new_optimizations = true
+      brightness = 0.90
     }
+    drop_shadow = yes
+
+
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -107,7 +113,12 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+}
+
+binds {
+    workspace_back_and_forth = 1
+    # allow_workspace_cycles = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
@@ -146,10 +157,13 @@ exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
+exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = waybar
-exec-once = hyprpaper
+# exec-once = hyprpaper
+exec-once = swww-daemon
+exec-once = swww img /home/n4v/.config/backgrounds/astronaut.png
 exec-once = eclipse -listen
 exec-once = spotifyd
 exec-once = swaync
