--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -9,29 +9,30 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Top Row
-bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod, W, togglefloating,
-bind = $mainMod, E, exec,XDG_CURRENT_DESKTOP=kde dolphin
-bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, T, exec, killall waybar || waybar
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT,  Q, killactive,
+bind = $mainMod,        W, togglefloating,
+bind = $mainMod,        E, exec,XDG_CURRENT_DESKTOP=kde dolphin
+bind = $mainMod SHIFT,  R, exec, hyprctl reload
+bind = $mainMod,        T, exec, killall waybar || waybar
+bind = $mainMod,        P, pseudo, # dwindle
 
 # Middle Row
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen, 1
-bind = $mainMod SHIFT, F, fullscreen, 0
-bind = $mainMod SHIFT, Semicolon, exec, blueman-manager
-bind = $mainMod, Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
+bind = $mainMod,        D, exec, $menu
+bind = $mainMod,        S, togglesplit, # dwindle
+bind = $mainMod,        F, fullscreen, 1
+bind = $mainMod SHIFT,  F, fullscreen, 0
 
 # Bottom Row
-bind = $mainMod, V, exec, kitty --class clipse -e 'clipse'
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, M, exit,
+bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
+bind = $mainMod,        B, exec, $browser
 
-# Special
-bind = $mainMod, Space, swapactiveworkspaces, current 1
-bind = $mainMod, Return, exec, $terminal
+# Special Chars
+bind = $mainMod SHIFT,  Semicolon, exec, kitty --class bluetuith -e 'bluetuith'
+bind = $mainMod,        Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
+bind = $mainMod,        Apostrophe, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
+bind = $mainMod,        Space, swapactiveworkspaces, current 1
+bind = $mainMod,        Return, exec, $terminal
+bind = $mainMod,        Backspace, exit,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -88,3 +89,11 @@ binde = $mainMod ALT, j, resizeactive, 0 25
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
+
+# Backlight
+binde =, XF86MonBrightnessDown, exec, brightnessctl set 10-
+binde =, XF86MonBrightnessUp, exec, brightnessctl set +10
+
+# Monitor Refresh Rate
+# bind = $mainMod ALT, 1, exec, sed -i 's/1920x1080@60/1920x1080@144/' "/home/n4v/.config/hypr/monitors.conf"
+# bind = $mainMod ALT, 2, exec, sed -i 's/1920x1080@144/1920x1080@60/' "/home/n4v/.config/hypr/monitors.conf"
