--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -4,10 +4,37 @@
 # |░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀|
 # +==============================================+
 
+# NOTE: General
+# windowrulev2 = bordercolor rgb(458588), fullscreen:1 # Full screen indicator color
+windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color
+windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
+# windowrulev2 = opacity 0.95, fullscreen:1
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# NOTE: Clipboard Manager (Clipse)
 windowrulev2 = float,class:(clipse)
-windowrulev2 = float,class:(blueman-manager)
-windowrulev2 = opacity 0.8, class:(blueman-manager)
+windowrulev2 = dimaround,class:(clipse)
+windowrulev2 = size 900 500,class:(clipse)
+
+# NOTE: Bluetooth Manager (Bluetuith)
+windowrulev2 = float,class:(bluetuith)
+windowrulev2 = dimaround,class:(bluetuith)
+windowrulev2 = opacity 0.85, class:(bluetuith)
+windowrulev2 = size 900 900,class:(bluetuith)
+
+# NOTE: Audio Mixer (Pulsemixer)
 windowrulev2 = float,class:(pulsemixer)
 windowrulev2 = size 900 500,class:(pulsemixer)
+windowrulev2 = dimaround,class:(pulsemixer)
 windowrulev2 = opacity 0.95, class:(pulsemixer)
+
+# NOTE: Terminal Emulator (Kitty)
+windowrulev2 = opacity 0.90 0.75,class:^(kitty)$
+
+# NOTE: Non-Nvim Text Editor (VSCode)
+windowrulev2 = opacity 0.90 0.80,class:^(Code)$
+
+# NOTE: Monitor Mode Scripts (VSCode)
+windowrulev2 = float,title:(MonitorModes)
+windowrulev2 = dimaround,title:(MonitorModes)
+windowrulev2 = size 400 550,title:(MonitorModes)
