--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,20 +1,27 @@
 {
   "layer": "top",
-  "width": 1920,
+  "width": 1800,
   "margin-top": 1,
   "margin-bottom": 0,
   "gtk-layer-shell": true,
   "reload_style_on_change": true,
   "fixed-center": true,
-
-  // Modules layout
-
-  "modules-left": ["hyprland/workspaces", "custom/spt"],
-  "modules-center": ["custom/weather", "clock"],
+  "align": 10,
+  //
+  // // Modules layout
+  //
+  "modules-left": [
+   "hyprland/workspaces", 
+   "custom/spt"],
+  "modules-center": [
+   "custom/weather", 
+   "clock"],
   "modules-right": [
     // "hyprland/language",
+   // "custom/weather", 
     "disk",
     "memory",
+    "backlight",
     "pulseaudio",
     "bluetooth",
     "battery",
@@ -50,9 +57,9 @@
     "format": " {}",
     "rotate": 0,
     "return-type": "json",
-    "on-click": "playerctl previous --player spotifyd",
-    "on-click-right": "playerctl next --player spotifyd",
-    "on-click-middle": "playerctl play-pause --player spotifyd",
+    "on-click": "playerctl play-pause --player spotifyd",
+    "on-click-right": "playerctl previous --player spotifyd",
+    "on-click-middle": "playerctl next --player spotifyd",
     "on-scroll-up": "volumecontrol.sh -p spotifyd i",
     "on-scroll-down": "volumecontrol.sh -p spotifyd d",
     "max-length": 50,
@@ -190,8 +197,8 @@
     "tooltip": false,
     "format": " {}%",
     "interval": 1,
-    "on-scroll-up": "light -A 5",
-    "on-scroll-down": "light -U 5",
+    "on-scroll-up": "brightnessctl set +10",
+    "on-scroll-down": "brightnessctl set 10-",
   },
   // media
   "custom/media": {
@@ -234,4 +241,8 @@
     "tooltip-format": "  {specific_free:0.2f}",
 	// 0.25 GB out of 2000.00 GB available. Alternatively 241.3MiB out of 1.9TiB available.
   },
-}
+  "hyprland/window": {  
+//"format": "{}"   // <--- these is the default value  
+    "format": "<span font='9' rise='-4444'>{}</span>"  
+  },
+},
