--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -6,9 +6,9 @@
 
 # NOTE: General
 
-# windowrulev2 = bordercolor rgb(#458588), fullscreen:1 # Full screen indicator color
-windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
-windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
+windowrulev2 = bordercolor rgb(7daea3), fullscreen:1 # Full screen indicator color
+# windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
+# windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
 # windowrulev2 = opacity 0.95, fullscreen:1
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
@@ -27,6 +27,13 @@ windowrulev2 = dimaround,class:(bluetuith)
 windowrulev2 = opacity 0.85, class:(bluetuith)
 windowrulev2 = size 900 900,class:(bluetuith)
 
+#
+# NOTE: Bluetooth Manager (Blueman)
+
+windowrulev2 = float,class:(blueman)
+windowrulev2 = dimaround,class:(blueman)
+windowrulev2 = opacity 0.85, class:(blueman)
+windowrulev2 = size 900 900,class:(blueman)
 
 # NOTE: Audio Mixer (Pulsemixer)
 
@@ -43,11 +50,17 @@ windowrulev2 = opacity 0.90 0.75,class:^(kitty)$
 
 # NOTE: Non-Nvim Text Editor (VSCode)
 
-windowrulev2 = opacity 0.90 0.80,class:^(Code)$
+windowrulev2 = opacity 0.90 0.80,class:^(Code)windowrulev2 = size 400 550,title:(MonitorModes)
 
 
-# NOTE: Monitor Mode Scripts (VSCode)
+# NOTE: File Viewer (Zathura)
 
-windowrulev2 = float,title:(MonitorModes)
-windowrulev2 = dimaround,title:(MonitorModes)
-windowrulev2 = size 400 550,title:(MonitorModes)
+windowrulev2 = opacity 0.80 0.80,class:(zathura)
+
+
+# NOTE: File Explorer (File Explorer)
+
+windowrulev2 = opacity 0.80 0.80,class:(Thunar)
+
+# NOTE: Video Manager
+
