--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -107,10 +107,10 @@
     "format": "{icon}     {volume}%",
     "rotate": 0,
     "format-muted": "<span size='large' rise='-1000'>󰖁 </span>",
-    "on-click": "~/.config/waybar/modules/audio_changer.py",
-    "on-click-middle": "$HOME/.config/scripts/volumecontrol.sh -o m",
-    "on-scroll-up": "$HOME/.config/scripts/volumecontrol.sh -o i",
-    "on-scroll-down": "$HOME/.config/scripts/volumecontrol.sh -o d",
+    "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
+    "on-click-middle": "kitty --class pulsemixer -e 'pulsemixer'",
+    "on-scroll-up": "wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+",
+    "on-scroll-down": "wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-",
     "tooltip-format": "{icon}   {desc} || {volume}%",
     "ignored-sinks": ["Easy Effects Sink"],
     "scroll-step": 5,
