--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -132,6 +132,7 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
 
     touchpad {
         natural_scroll = false
@@ -143,8 +144,8 @@ gestures {
 }
 
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = usb-gaming-mouse
+    sensitivity = 0
 }
 # +====================+
 # |░█▀▀░█░█░█▀▀░█▀▀░█▀▀|
@@ -164,7 +165,7 @@ exec-once = waybar
 # exec-once = hyprpaper
 exec-once = swww-daemon
 exec-once = swww img /home/n4v/.config/backgrounds/astronaut.png
-exec-once = eclipse -listen
+exec-once = clipse -listen
 exec-once = spotifyd
 exec-once = swaync
 exec-once = udsikie &
@@ -184,7 +185,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,gtk3
+env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_SCALE_FACTOR_ROUNDING_POLICY,round
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
