--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,9 @@
+$color6 = rgb(d4be98)
+$color7 = rgb(282828)
+$color0 = rgb(282828)
 background {
     monitor =
-    path = $HOME/.config/backgrounds/cosmo.png
+    path = $HOME/.config/backgrounds/astronaut.png
     # color = $color1
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_size = 4
@@ -46,7 +49,7 @@ label {
 label {
     monitor =
     text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
-    color = $color7
+    color = $color6
     font_size = 22
     font_family = JetBrainsMono Nerd Font 10
 
@@ -59,7 +62,7 @@ label {
 label {
     monitor =
     text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
-    color = $color7
+    color = $color6
     font_size = 18
     font_family = JetBrainsMono Nerd Font 10
 
@@ -71,8 +74,8 @@ label {
 # Degrees
 label {
     monitor =
-    text = cmd[update:18000000] echo "<b>Feels like<big> $(wttrbar --location Mission --custom-indicator '{ICON} {temp_C}' | cut -d '\' -f 2 | cut -c 14-) </big></b>"
-    color = $color7
+    text = cmd[update:18000000] echo "Type to unlock"
+    color = $color6
     font_size = 18
     font_family = Jetbrains Mono 10
 
