--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -11,7 +11,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Top Row
 bind = $mainMod SHIFT,  Q, killactive,
 bind = $mainMod,        W, togglefloating,
-bind = $mainMod,        E, exec,XDG_CURRENT_DESKTOP=kde dolphin
+bind = $mainMod,        E, exec, Thunar
 bind = $mainMod SHIFT,  R, exec, hyprctl reload
 bind = $mainMod,        T, exec, killall waybar || waybar
 bind = $mainMod,        P, pseudo, # dwindle
@@ -27,10 +27,12 @@ bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
 
 # Special Chars
-bind = $mainMod SHIFT,  Semicolon, exec, kitty --class bluetuith -e 'bluetuith'
+bind = $mainMod, Tab, cyclenext,
+bind = $mainMod SHIFT,  Semicolon, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
 bind = $mainMod,        Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
-bind = $mainMod,        Apostrophe, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
+bind = $mainMod,        Apostrophe, exec, kitty --class bluetuith -e 'bluetuith'
 bind = $mainMod,        Space, swapactiveworkspaces, current 1
+
 bind = $mainMod,        Return, exec, $terminal
 bind = $mainMod,        Backspace, exit,
 
@@ -86,8 +88,8 @@ binde = $mainMod ALT, k, resizeactive, 0 -25
 binde = $mainMod ALT, j, resizeactive, 0 25
 
 # Sound
-binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
-binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 2.0 @DEFAULT_AUDIO_SINK@ 5%+
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 2.0 @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 # Backlight
