--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -10,15 +10,17 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Top Row
 bind = $mainMod SHIFT,  Q, killactive,
-bind = $mainMod,        W, togglefloating,
 bind = $mainMod,        E, exec, Thunar
 bind = $mainMod SHIFT,  R, exec, hyprctl reload
 bind = $mainMod,        T, exec, killall waybar || waybar
+bind = $mainMod,        I, togglesplit, # dwindle
+bind = $mainMod,        O, togglefloating,
 bind = $mainMod,        P, pseudo, # dwindle
 
 # Middle Row
 bind = $mainMod,        D, exec, $menu
-bind = $mainMod,        S, togglesplit, # dwindle
+bind = $mainMod,        S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh rc
+bind = $mainMod SHIFT,  S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh ri
 bind = $mainMod,        F, fullscreen, 1
 bind = $mainMod SHIFT,  F, fullscreen, 0
 
