--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -166,6 +166,7 @@ exec-once = waybar
 exec-once = swww-daemon
 exec-once = swww img /home/n4v/.config/backgrounds/astronaut.png
 exec-once = clipse -listen
+exec-once = clipse -wl-store
 exec-once = spotifyd
 exec-once = swaync
 exec-once = udsikie &
