--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -50,7 +50,13 @@ windowrulev2 = opacity 0.90 0.75,class:^(kitty)$
 
 # NOTE: Non-Nvim Text Editor (VSCode)
 
-windowrulev2 = opacity 0.90 0.80,class:^(Code)windowrulev2 = size 400 550,title:(MonitorModes)
+windowrulev2 = opacity 0.90 0.80,class:^(Code)
+
+
+# NOTE: Monitor Config (Custom Scripts)
+windowrulev2 = float,title:(MonitorModes)
+windowrulev2 = size 400 550,title:(MonitorModes)
+windowrulev2 = opacity 0.80 0.80,title:(MonitorModes)
 
 
 # NOTE: File Viewer (Zathura)
@@ -58,9 +64,17 @@ windowrulev2 = opacity 0.90 0.80,class:^(Code)windowrulev2 = size 400 550,title:
 windowrulev2 = opacity 0.80 0.80,class:(zathura)
 
 
-# NOTE: File Explorer (File Explorer)
+# NOTE: File Explorer (Thunar)
 
 windowrulev2 = opacity 0.80 0.80,class:(Thunar)
 
-# NOTE: Video Manager
 
+# NOTE: Music Player (Spotify)
+
+# windowrulev2 = opacity 0.80 0.80,title:^(Spotify Premium)$
+windowrulev2 = opacity 0.85 0.85,class:^(Spotify)$
+
+
+
+### Experimental Applications 
+# windowrulev2 = opacity 0.85 0.85,class:^(simple)$
