--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -11,8 +11,10 @@
   // // Modules layout
   //
   "modules-left": [
-   "hyprland/workspaces", 
-   "custom/spt"],
+   "hyprland/workspaces",
+   "hyprland/window",
+   "custom/spt",
+],
   "modules-center": [
    "custom/weather", 
    "clock"],
@@ -79,7 +81,7 @@
       "mode": "month",
       "on-scroll": 1,
       "format": {
-        "today": "<span color='#ff6699'><b><u>{}</u></b></span>",
+        "today": "<span color='#ea6962'><b><u>{}</u></b></span>",
       },
     },
   },
