a lot of rearranging also added pypr

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -27,13 +27,16 @@ bind = $mainMod SHIFT,  F, fullscreen, 0
 # Bottom Row
 bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
+bind = $mainMod SHIFT,  B, exec, $studentbrowser
+bind = $mainMod, A, exec, pypr toggle term 
 
 # Special Chars
 bind = $mainMod, Tab, cyclenext,
 bind = $mainMod SHIFT,  Semicolon, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
 bind = $mainMod,        Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
 bind = $mainMod,        Apostrophe, exec, kitty --class bluetuith -e 'bluetuith'
-bind = $mainMod,        Space, swapactiveworkspaces, current 1
+# bind = $mainMod,        Space, swapactiveworkspaces, current 1
+bind = $mainMod, Space, exec, pypr shift_monitors +1
 
 bind = $mainMod,        Return, exec, $terminal
 bind = $mainMod,        Backspace, exit,
@@ -101,3 +104,12 @@ binde =, XF86MonBrightnessUp, exec, brightnessctl set +10
 # Monitor Refresh Rate
 # bind = $mainMod ALT, 1, exec, sed -i 's/1920x1080@60/1920x1080@144/' "/home/n4v/.config/hypr/monitors.conf"
 # bind = $mainMod ALT, 2, exec, sed -i 's/1920x1080@144/1920x1080@60/' "/home/n4v/.config/hypr/monitors.conf"
+
+
+
+### TEST
+## Setup the key binding
+bind = $mainMod, X, exec, pypr expose
+
+# Add some style to the "exposed" workspace
+workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow:false
