--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show combi
 $browser = firefox
+$studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/ch27apni.Student/
 $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 
 # +==========================================================+
@@ -147,6 +148,27 @@ device {
     name = usb-gaming-mouse
     sensitivity = 0
 }
+# +==========================================+
+# |░█▀█░█▀█░▀█▀░█▄░▄█░█▀█░▀█▀░▀█▀░█▀█░█▀█░█▀▀|
+# |░█▀█░█░█░░█░░█░█░█░█▀█░░█░░░█░░█░█░█░█░▀▀█|
+# |░▀░▀░▀░▀░▀▀▀░▀░ ░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀|
+# +==========================================+
+# https://wiki.hyprland.org/Configuring/Variables/#animations
+
+animations {
+    enabled = true
+
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 85%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 1, default
+    animation = workspaces, 1, 3, default
+}
 # +====================+
 # |░█▀▀░█░█░█▀▀░█▀▀░█▀▀|
 # |░█▀▀░▄▀▄░█▀▀░█░░░▀▀█|
@@ -158,6 +180,7 @@ exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
+exec-once = pypr
 exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
@@ -194,12 +217,24 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
+# █▄░█ █░█ █ █▀▄ █ ▄▀█
+# █░▀█ ▀▄▀ █ █▄▀ █ █▀█
+
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GL_VRR_ALLOWED,1
+env = WLR_NO_HARDWARE_CURSORS,1
+env = WLR_DRM_NO_ATOMIC,1
+
+cursor {
+    no_hardware_cursors = true
+}
+
 # +============================+
 # |░█▀▀░█▀█░█░█░█▀▄░█▀▀░█▀▀░█▀▀|
 # |░▀▀█░█░█░█░█░█▀▄░█░░░█▀▀░▀▀█|
 # |░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀▀▀░▀▀▀|
 # +============================+
 
-source = ~/.config/hypr/nvidia.conf
-source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
