--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -78,3 +78,6 @@ windowrulev2 = opacity 0.85 0.85,class:^(Spotify)$
 
 ### Experimental Applications 
 # windowrulev2 = opacity 0.85 0.85,class:^(simple)$
+windowrulev2 = float,title:^(radio buttons)$
+windowrulev2 = size 300 200,title:^(radio buttons)$
+# windowrulev2 = opacity 0.80 0.80,title:^(radio buttons)$
