--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -10,8 +10,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Top Row
 bind = $mainMod SHIFT,  Q, killactive,
+bind = $mainMod,        Q, exec, pypr toggle music
+bind = $mainMod,        W, exec, pypr toggle term
 bind = $mainMod,        E, exec, Thunar
-bind = $mainMod SHIFT,  R, exec, hyprctl reload
+bind = $mainMod SHIFT,  R, exec, hyprctl reload && pypr reload
 bind = $mainMod,        T, exec, killall waybar || waybar
 bind = $mainMod,        I, togglesplit, # dwindle
 bind = $mainMod,        O, togglefloating,
@@ -28,14 +30,12 @@ bind = $mainMod SHIFT,  F, fullscreen, 0
 bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
 bind = $mainMod SHIFT,  B, exec, $studentbrowser
-bind = $mainMod, A, exec, pypr toggle term 
 
 # Special Chars
 bind = $mainMod, Tab, cyclenext,
 bind = $mainMod SHIFT,  Semicolon, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
-bind = $mainMod,        Semicolon, exec, kitty --class pulsemixer -e 'pulsemixer'
-bind = $mainMod,        Apostrophe, exec, kitty --class bluetuith -e 'bluetuith'
-# bind = $mainMod,        Space, swapactiveworkspaces, current 1
+bind = $mainMod,        Semicolon, exec, pypr show pulsemixer # NOTE: Must be `show` to avoid kitty process
+bind = $mainMod,        Apostrophe, exec, pypr show bluetuith # taking up memory in the background
 bind = $mainMod, Space, exec, pypr shift_monitors +1
 
 bind = $mainMod,        Return, exec, $terminal
@@ -93,8 +93,8 @@ binde = $mainMod ALT, k, resizeactive, 0 -25
 binde = $mainMod ALT, j, resizeactive, 0 25
 
 # Sound
-binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 2.0 @DEFAULT_AUDIO_SINK@ 5%+
-binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 2.0 @DEFAULT_AUDIO_SINK@ 5%-
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 # Backlight
