Yeehaw more config changes

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -37,6 +37,7 @@ bind = $mainMod SHIFT,  Semicolon, exec, kitty -o font_size=16 --title MonitorMo
 bind = $mainMod,        Semicolon, exec, pypr show pulsemixer # NOTE: Must be `show` to avoid kitty process
 bind = $mainMod,        Apostrophe, exec, pypr show bluetuith # taking up memory in the background
 bind = $mainMod, Space, exec, pypr shift_monitors +1
+bind = $mainMod,        Slash, exec, pypr show proc
 
 bind = $mainMod,        Return, exec, $terminal
 bind = $mainMod,        Backspace, exit,
