--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,11 +7,16 @@ placement_strategy bottom
 ####################
 # FONT
 ####################
-font_family 		FiraCodeNFM-Reg
-bold_font			FiraCodeNFM-Med
-italic_font			FiraCodeNFM-Ret
-bold_italic_font	FiraCodeNFM-SemBd
+# FIRA
+# font_family       FiraCodeNFM-Reg
+# bold_font         FiraCodeNFM-Med
+# italic_font       FiraCodeNFM-Ret
+# bold_italic_font  FiraCodeNFM-SemBd
 
+font_family       JetBrainsMonoNFM-Regular
+bold_font         JetBrainsMonoNFM-Medium
+italic_font       JetBrainsMonoNFM-Italic
+bold_italic_font  JetBrainsMonoNFM-SemiBoldItalic
 font_size			16.0
 
 detect_urls yes
