--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -5,7 +5,7 @@
 # +==============================================+
 
 # NOTE: General
-
+windowrulev2=noblur,class:^()$,title:^()$
 windowrulev2 = bordercolor rgb(7daea3), fullscreen:1 # Full screen indicator color
 # windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
 # windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
@@ -50,13 +50,17 @@ windowrulev2 = opacity 0.90 0.75,class:^(kitty)$
 
 # NOTE: Non-Nvim Text Editor (VSCode)
 
-windowrulev2 = opacity 0.90 0.80,class:^(Code)
+# windowrulev2 = opacity 0.90 0.80,class:^(Code)
 
 
 # NOTE: Monitor Config (Custom Scripts)
 windowrulev2 = float,title:(MonitorModes)
 windowrulev2 = size 400 550,title:(MonitorModes)
 windowrulev2 = opacity 0.80 0.80,title:(MonitorModes)
+windowrulev2 = float,class:(display_manager)
+windowrulev2 = size 550 400,title:(display_manager)
+windowrulev2 = opacity 0.80 0.80,title:(display_manager)
+
 
 
 # NOTE: File Viewer (Zathura)
