--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -30,10 +30,11 @@ bind = $mainMod SHIFT,  F, fullscreen, 0
 bind = $mainMod,        V, exec, kitty --class clipse -e 'clipse'
 bind = $mainMod,        B, exec, $browser
 bind = $mainMod SHIFT,  B, exec, $studentbrowser
+bind = $mainMod,        M, exec, kitty --class display_manager -e 'display-manager'
 
 # Special Chars
 bind = $mainMod, Tab, cyclenext,
-bind = $mainMod SHIFT,  Semicolon, exec, kitty -o font_size=16 --title MonitorModes '/home/n4v/Projects/shell-scripts/monitor.sh'
+bind = $mainMod SHIFT,  Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh
 bind = $mainMod,        Semicolon, exec, pypr show pulsemixer # NOTE: Must be `show` to avoid kitty process
 bind = $mainMod,        Apostrophe, exec, pypr show bluetuith # taking up memory in the background
 bind = $mainMod, Space, exec, pypr shift_monitors +1
@@ -111,6 +112,8 @@ binde =, XF86MonBrightnessUp, exec, brightnessctl set +10
 ### TEST
 ## Setup the key binding
 bind = $mainMod, X, exec, pypr expose
+bind = $mainMod ALT, Semicolon, exec, /home/n4v/.config/hypr/scripts/connect.sh
 
 # Add some style to the "exposed" workspace
 workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5,border:true,shadow:false
+exec-once = /home/n4v/.config/hypr/scripts/mutedefaultsink.sh
