Yeehaw flutter projects

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -100,8 +100,8 @@ binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 # Backlight
-binde =, XF86MonBrightnessDown, exec, brightnessctl set 10-
-binde =, XF86MonBrightnessUp, exec, brightnessctl set +10
+binde =, XF86MonBrightnessDown, exec, brightnessctl set 10%-
+binde =, XF86MonBrightnessUp, exec, brightnessctl set +10%
 
 # Monitor Refresh Rate
 # bind = $mainMod ALT, 1, exec, sed -i 's/1920x1080@60/1920x1080@144/' "/home/n4v/.config/hypr/monitors.conf"
